--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -8,16 +9,27 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
 }
 
 #sketchpad {
     display: flex;
     flex-direction: column;
-    height: 320px;
-    width: 320px;
+    width: 30vw;
     border: 1px solid black;
     padding: 0;
     margin: 0;
+}
+
+#buttonpad {
+    display: flex;
+    justify-content: space-between;
+    width: 30vw;
+    margin-top: 20px;
+}
+
+button {
+    flex: 1;
 }
 
 .row {
