--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,13 @@
 
 body {
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    min-height: 300px;
 }
 
 #sketchpad {
@@ -19,17 +21,20 @@ body {
     border: 1px solid black;
     padding: 0;
     margin: 0;
+    background-color: black;
+    flex: none;
 }
 
 #buttonpad {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 30vw;
     margin-top: 20px;
+    gap: 10px;
+    flex: none;
 }
 
 button {
-    flex: 1;
     border-radius: 10% / 50%;
 }
 
@@ -45,5 +50,9 @@ button {
 }
 
 .blackCell {
-    background-color: black;
+    background-color: white;
+}
+
+.random {
+    background-color: rgb(255, 255, 255);
 }
