--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,7 +17,7 @@ body {
 #sketchpad {
     display: flex;
     flex-direction: column;
-    width: 30vw;
+    min-width: 30%;
     border: 1px solid black;
     padding: 0;
     margin: 0;
